--- a/RoutingPractice/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/RoutingPractice/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Dummy3" asp-action="DummyCustomAttributeRoute">Dummy Cusom Route Attribute</a>
                         </li>
                         <li class="ml-auto nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="" asp-action="Index">Admin Area</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="" asp-action="Index">Admin</a>
                         </li>
                     </ul>
                 </div>
