--- a/RoutingPractice/Views/Dummy2/DummyCustomRoute.cshtml
+++ b/RoutingPractice/Views/Dummy2/DummyCustomRoute.cshtml
@@ -1,5 +1,5 @@
-﻿@{ 
-    ViewBag.Title = "Home";
+﻿@{
+    ViewBag.Title = "Dummy Custom Route";
 }
 <div class="text-center">
     <h1>@ViewBag.Title</h1>
