--- a/RoutingPractice/Areas/Admin/Views/Home/Index.cshtml
+++ b/RoutingPractice/Areas/Admin/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@{ 
-    ViewBag.Title = "Home";
+﻿@{
+    ViewBag.Title = "Admin Page";
 }
 <div class="text-center">
     <h1>@ViewBag.Title</h1>
