--- a/RoutingPractice/Views/Dummy1/DummyDefault.cshtml
+++ b/RoutingPractice/Views/Dummy1/DummyDefault.cshtml
@@ -1,5 +1,5 @@
-﻿@{ 
-    ViewBag.Title = "Home";
+﻿@{
+    ViewBag.Title = "Dummy Default";
 }
 <div class="text-center">
     <h1>@ViewBag.Title</h1>
